new version of embedly jquery

--- a/examples/embed.html
+++ b/examples/embed.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
-<script type="text/javascript" src="../jquery.embedly.min.js"></script>
+<script type="text/javascript" src="../jquery.embedly.js"></script>
 <style>
 BODY {background-color:#333333;}
 #content{background-color:#FFFFFF;margin:0 auto;width:800px;}
@@ -17,7 +17,7 @@ li {list-style:none; margin:20px; }
 </style>
 </head>
 <body>
-<div id="header"><a href="http://api.embed.ly"><img src="http://api.embed.ly/static/img/header_orange.png"/></a></div>
+<div id="header"><a href="http://api.embed.ly"><img src="http://static.embed.ly/images/logo.png"/></a></div>
 
 <div id="content" class="main">
 
