--- a/examples/photos.html
+++ b/examples/photos.html
@@ -17,7 +17,7 @@ li {list-style:none; margin:20px; }
 </style>
 </head>
 <body>
-<div id="header"><a href="http://api.embed.ly"><img src="http://api.embed.ly/static/img/header_orange.png"/></a></div>
+<div id="header"><a href="http://api.embed.ly"><img src="http://static.embed.ly/images/logo.png"/></a></div>
 
 <div id="content" class="main">
 
