--- a/examples/sample.html
+++ b/examples/sample.html
@@ -13,20 +13,19 @@ BODY {background-color:#333333;}
 #embedform .submit{float:right;font-size:1.7em;margin-top:10px;}
 #embed {margin:auto;text-align:center;width:600px;}
 #header{ height:75px;}
-a img {border:none;}
+a img {border:none; width: 120px; height: 90px;}
 ul { margin:0; padding:0; }
 li {list-style:none; margin:20px 0; clear:both;  }
 li span { padding-left:1em; font-size:14px; color:#808080; font-family: "Helvetica Neue Light", Helvetica, Arial, sans-serif;  }
-li a img { max-width:50px;}
 div.embed { display:none;}
 h4 { font-size:18px; margin:0 0 1em; color:#808080; font-family: "Helvetica Neue Light", Helvetica, Arial, sans-serif; }
-
+a.googlenl { background-color:#ff00fa; padding-left:20px}
 /* close button positioned on upper right corner */
 </style>
 </head>
 <body>
   <div class="page">
-    <div id="header"><a href="http://api.embed.ly"><img src="http://static.embed.ly/images/api/logo.png"/></a></div>
+    <div id="header"><a href="http://api.embed.ly"><img src="http://static.embed.ly/images/logo.png"/></a></div>
     <div id="content" class="main">
       <div class="youtube">
         <h4>My favorite Memes</h4>
@@ -35,6 +34,12 @@ h4 { font-size:18px; margin:0 0 1em; color:#808080; font-family: "Helvetica Neue
           <li><a href="http://www.youtube.com/watch?v=zVNTdWbVBgc">Video</a></li>
           <li><a href="http://www.youtube.com/watch?v=Q5im0Ssyyus">Video</a></li>
           <li><a href="http://www.youtube.com/watch?v=wCF3ywukQYA">Video</a></li>
+		  <li><a href="http://www.collegehumor.com/video:1939725">Video</a></li>
+		  <li><a href="http://vimeo.com/14017511">Video</a></li>
+		  <li><a href="http://twitpic.com/1ezvfa">Video</a></li>
+		  <li><a href="http://imgur.com/Wp9NW">Video</a></li>
+		  <li><a href="http://flx.me">Video</a></li>
+		  <li><a href="http://google.nl/about">Video</a></li>
         </ul>
       </div>
           </div>
@@ -42,14 +47,14 @@ h4 { font-size:18px; margin:0 0 1em; color:#808080; font-family: "Helvetica Neue
 <script type="text/javascript">
 
 $(document).ready(function() {
-  //$("a").embedly({maxWidth: 400, wrapElement: 'div', method : "after", key: '4274d580eb3f11df84894040444cdc60' });
-  $("ul a").embedly({}, function(oembed, dict){
+  $("a").embedly({}, function(oembed, dict){
     if ( oembed == null)
-      return;
+      alert("no embedly content found");    
     var output = "<a class='embedly' href='#'><img src='"+oembed.thumbnail_url+"' /></a><span>"+oembed.title+"</span>";
     output += oembed['code'];
-		$(dict["node"]).parent().html( output );
+    $(dict["node"]).parent().html( output );
   });
+  var anchors = $("a");  anchors.embedly();  anchors.filter("[href*=flx.me]").addClass("googlenl");
   $('a.embedly').live("click", function(e){
     e.preventDefault();
     $(this).parents('li').find('.embed').toggle();
