--- a/examples/embed.html
+++ b/examples/embed.html
@@ -40,6 +40,7 @@ $(document).ready(function() {
 			return false;
 
 		$.embedly(q, {maxWidth: 600, wrapElement: 'div' }, function(oembed, dict){
+			console.log('hi');
 			if (oembed == null)
 				$("#embed").html('<p class="text"> Not A Valid URL </p>');
 			else 
