--- a/examples/photos.html
+++ b/examples/photos.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
-<script type="text/javascript" src="../embedly.js"></script>
+<script type="text/javascript" src="../jquery.embedly.js"></script>
 <style>
 BODY {background-color:#333333;}
 #content{background-color:#FFFFFF;margin:100px auto;width:800px;}
@@ -35,10 +35,10 @@ li {list-style:none; margin:20px; }
 
 </div>
 <script type="text/javascript">
-/*
+
 $(document).ready(function() {
 	$("a").embedly({maxWidth: 400, wrapElement: 'div', method : "after" });
-});*/
+});
 </script>
 
 </body>
