example use cases update

--- a/examples/photos.html
+++ b/examples/photos.html
@@ -3,13 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
-<script type="text/javascript" src="../embedly.js"></script>
-<script type="text/javascript">
-
-	// set custom embedly defaults
-	// More customizations at http://api.embed.ly/tools/script
-	var embedly_maxWidth = 400;
-</script>
+<script type="text/javascript" src="../jquery.embedly.js"></script>
 <style>
 BODY {background-color:#333333;}
 #content{background-color:#FFFFFF;margin:100px auto;width:800px;}
@@ -37,15 +31,15 @@ li {list-style:none; margin:20px; }
 <li><a href="http://www.flickr.com/photos/dryponder/4475104368/in/set-72157623726710218/">Photo</a></li>
 <li><a href="http://tweetphoto.com/16513486">Photo</a></li>
 <li><a href="http://i.imgur.com/PUai9.png">Photo</a></li>
-<li><a href="http://phodroid.com/10/03/2c2xzy">Photo</a></li>
+<li><a href="http://instagram.com/p/CSnoF/">Photo</a></li>
 </ul>
 
 </div>
 <script type="text/javascript">
 
-/*$(document).ready(function() {
+$(document).ready(function() {
 	$("a").embedly({maxWidth: 300, wrapElement: 'div', method : "after" });
-});*/
+});
 
 </script>
 
