--- a/examples/twitter2.html
+++ b/examples/twitter2.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
-<script type="text/javascript" src="http://jquery.tboetig.com/embedly.js" ></script>
+<!-- http://api.embed.ly/tools/script -->
+<script type="text/javascript" src="http://scripts.embed.ly/embedly.js" ></script>
 <style>
 BODY {background-color:#333333;}
 #content{background-color:#FFFFFF;margin:0 auto;width:800px; padding:20px; }
