fixed issue with reg ex parameters being ignored

--- a/examples/photos.html
+++ b/examples/photos.html
@@ -38,7 +38,10 @@ li {list-style:none; margin:20px; }
 <script type="text/javascript">
 
 $(document).ready(function() {
-	$("a").embedly({maxWidth: 300, wrapElement: 'div', method : "after" });
+	$("a").embedly({maxWidth: 300, 
+	             wrapElement: 'div', 
+	                 method : "after"
+	               });
 });
 
 </script>
