--- a/examples/videos.html
+++ b/examples/videos.html
@@ -42,7 +42,8 @@ $(document).ready(function() {
   $("ul a").embedly({maxWidth: 400, 
                   wrapElement: 'div', 
                        method: "after",
-                     endpoint: 'preview' })
+                     endpoint: 'oembed'
+                         })
            .css({color:"#ff0033",fontWeight:"bold",display:"block",padding:"2em"})
            .animate({left: '+=50', opacity:0.25}, 
                                             2000, 
