Adds a key for use on the github pages

--- a/examples/autoplay.html
+++ b/examples/autoplay.html
@@ -94,7 +94,7 @@
     $(document).ready(function() {
       $(".video a").embedly({maxWidth: 500,
                          autoplay: true,
-                         key : 'internal',
+                         key : '4d1f889c20ed11e1abb14040d3dc5c07',
                          success : function(oembed, data){
                            //replace the a tag with an image
                            var d = $('<a href="#" class="play"><span></span></a>')
