--- a/examples/twitter.html
+++ b/examples/twitter.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.embedly.js"></script>
 <style>
 BODY {background-color:#333333;}
@@ -47,7 +47,7 @@ function search_twitter(q){
 				arr.push(u);
 			}
 		});
-		$.embedly(arr, {maxWidth:500},  function(oembed){ 
+		$.embedly(arr, {maxWidth:500,key : '4d1f889c20ed11e1abb14040d3dc5c07'},  function(oembed){
 		  if (oembed != null) {
 		    $("#stuff").append('<li>'+(oembed.code)+'</li>');
 		  }
