--- a/examples/photos.html
+++ b/examples/photos.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.embedly.js"></script>
 <style>
 BODY {background-color:#333333;}
@@ -38,9 +38,10 @@ li {list-style:none; margin:20px; }
 <script type="text/javascript">
 
 $(document).ready(function() {
-	$("a").embedly({maxWidth: 300, 
-	             wrapElement: 'div', 
-	                 method : "after"
+	$("a").embedly({maxWidth: 300,
+	             wrapElement: 'div',
+	                 method : "after",
+	                 key : '4d1f889c20ed11e1abb14040d3dc5c07'
 	               });
 });
 
