--- a/examples/autoplay.html
+++ b/examples/autoplay.html
@@ -34,13 +34,14 @@
     <div class="topbar">
       <div class="topbar-inner">
         <div class="container">
-          <h3><a href="index.html">jQuery Preview</a></h3>
+          <h3><a href="index.html">Embedly jQuery</a></h3>
           <ul>
-            <li><a href="status.html">Status</a></li>
-            <li class="active"><a href="link.html">Link</a></li>
-            <li><a href="large.html">Large Link</a></li>
-            <li><a href="rich.html">Rich Link</a></li>
-            <li><a href="multi.html">Multiple Inputs</a></li>
+            <li><a href="photos.html">Photos</a></li>
+            <li><a href="rich.html">Rich</a></li>
+            <li><a href="twitter.html">Twitter</a></li>
+            <li><a href="embed.html">Embed</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li class="active" ><a href="autoplay.html">Autoplay</a></li>
           </ul>
         </div>
       </div>
