fixed how default/settings values are handled and appended to the request URL

--- a/examples/videos.html
+++ b/examples/videos.html
@@ -43,7 +43,7 @@ $(document).ready(function() {
                   wrapElement: 'div',
                        method: "after",
                      endpoint: 'oembed',
-                     key : '4d1f889c20ed11e1abb14040d3dc5c07'
+                     key : '132409jafq09f3'
                          })
            .css({color:"#ff0033",fontWeight:"bold",display:"block",padding:"2em"})
            .animate({left: '+=50', opacity:0.25},
