cleanup for version 2.1.9

--- a/tests.html
+++ b/tests.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
      // --- Unittest Code goes here ---
      $(document).ready(function(){
-       $.embedly.defaults['key'] = 'internal';
+       $.embedly.defaults['key'] = 'EMBEDLY_KEY';
        QUnit.log = function(result, message)
        {
         if (window.console && window.console.log)
