--- a/examples/rich.html
+++ b/examples/rich.html
@@ -2,8 +2,8 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Embedly - Embed - Example</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>  
-<script type="text/javascript" src="../jquery.embedly.js"></script>
+<script type="text/javascript" src="../libs/jquery/jquery.js"></script>
+<script type="text/javascript" src="../src/embedly-jquery.js"></script>
 <style>
 BODY {background-color:#333333;}
 #content{background-color:#FFFFFF;margin:0 auto;width:800px;}
@@ -30,7 +30,7 @@ li {list-style:none; margin:20px; }
 <script type="text/javascript">
 
 $(document).ready(function() {
-	$("a").embedly({maxWidth: 400, wrapElement: 'div', method : "after" });
+	$("#content a").embedly({query: {maxwidth: 400}, method : "after", key: '4d1f889c20ed11e1abb14040d3dc5c07'});
 });
 </script>
 
