Make gh-pages easier to deploy

--- a/demo/index.template.html
+++ b/demo/index.template.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <link rel="shortcut icon" href="http://embed.ly/static/favicon.ico">
-    <script type="text/javascript" src="../libs/jquery/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="../src/embedly-jquery.js"></script>
+    <script type="text/javascript" src="js/embedly-jquery.js"></script>
     <script type="text/javascript" src="js/prettify.js"></script>
     <link rel="stylesheet" href="css/prettify.css">
     <link rel="stylesheet" href="css/bootstrap.css">
