Clean up, naming and add a few more tests

--- a/demo/index.template.html
+++ b/demo/index.template.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="http://embed.ly/static/favicon.ico">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/embedly-jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.embedly.js"></script>
     <script type="text/javascript" src="js/prettify.js"></script>
     <link rel="stylesheet" href="css/prettify.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -27,16 +27,31 @@
     <div id="content" class="container" >
       <div class="row">
         <div class="span12">
-        <h1>Embedly jQuery</h1>
-        <p>
-          Embed content from over 250 different sources with one line of Javascript.
-        </p>
-        <pre class="prettyprint linenums">
-$('a').embedly();</pre>
+          <div class="hero-unit">
+          <h1>Embedly jQuery</h1>
+            <p>
+              Embed content from over 250 different sources with one line of Javascript.
+            </p>
+            <pre class="prettyprint linenums">
+    $('a').embedly();</pre>
+
+            <p>
+              Embedly jQuery allows to interact with the Embedly API to add rich URL previews to any site. To get an idea of how it works you can check out the following demos.
+            </p>
+            <ul class="unstyled">
+              <li><a class="btn btn-large" href="inline.html">Inline</a></li>
+              <li><a class="btn btn-large" href="modal.html">Modal</a></li>
+              <li><a class="btn btn-large" href="tooltip.html">Tooltip</a></li>
+            </ul>
+            <a class="btn btn-primary btn-large" href="http://github.com/embedly/embedly-jquery">Code</a>
+            <div class="clearfix"></div>
+          </div>
         </div>
       </div>
-      <div class="row" rel="placeholder">
+      <div class="row">
+        <div class="span12" rel="placeholder">
 
+        </div>
       </div>
     </div>
   </body>
