--- a/demo/modal.html
+++ b/demo/modal.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="http://embed.ly/static/favicon.ico">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/embedly-jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.embedly.js"></script>
     <script type="text/javascript" src="js/prettify.js"></script>
     <link rel="stylesheet" href="css/prettify.css">
     <link rel="stylesheet" href="css/bootstrap.css">
