--- a/test/embedly-jquery.html
+++ b/test/embedly-jquery.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
   <script src="../libs/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
-  <script src="../src/embedly-jquery.js"></script>
+  <script src="../src/jquery.embedly.js"></script>
   <script src="embedly-jquery_test.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
        you REALLY want to mess around with jQuery in the console. REMEMBER WE
@@ -24,8 +24,18 @@
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">
     <div id="basic">
-      <li><a class="photo" href="http://twitpic.com/1c4t5h">Photo</a></li>
+      <a class="photo" href="http://twitpic.com/1c4t5h">Photo</a>
     </div>
+    <div id="photo">
+      <a href="http://twitpic.com/135xa">Photo</a>
+    </div>
+    <div id="video">
+      <a href="http://www.youtube.com/watch?v=9bZkp7q19f0">Video</a>
+    </div>
+    <div id="rich">
+      <li><a href="http://www.slideshare.net/AmitRanjan/quick-tour">Rich</a></li>
+    </div>
+
   </div>
 </body>
 </html>
