Add the urlRe back into options. fixes #33

--- a/test/embedly-jquery.html
+++ b/test/embedly-jquery.html
@@ -35,6 +35,10 @@
     <div id="rich">
       <li><a href="http://www.slideshare.net/AmitRanjan/quick-tour">Rich</a></li>
     </div>
+    <div id="urlRe">
+      <li><a href="http://embed.ly">Link</a></li>
+      <li><a href="http://apple.com">Rich</a></li>
+    </div>
 
   </div>
 </body>
