--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@ Embedly jQuery to your document.</p>
 <pre class="prettyprint linenums">
 &lt;head&gt;
   &lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"&gt;&lt;/script&gt;
-  &lt;script src="http://scripts.embed.ly/jquery.embedly-3.0.2.min.js" type="text/javascript"&gt;&lt;/script&gt;
+  &lt;script src="http://scripts.embed.ly/jquery.embedly-3.0.3.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;/head&gt;
 </pre>
 <p>You can now use jQuery selectors to replace links with embedded content:</p>
@@ -366,8 +366,8 @@ $('a').embedly().on('click', function(){
 <p>To get you going even faster, Embedly hosts all the files you need on
 scripts.embed.ly. The latest version is available here:</p>
 <pre class="prettyprint linenums">
-http://scripts.embed.ly/jquery.embedly-3.0.2.js
-http://scripts.embed.ly/jquery.embedly-3.0.2.min.js
+http://scripts.embed.ly/jquery.embedly-3.0.3.js
+http://scripts.embed.ly/jquery.embedly-3.0.3.min.js
 </pre>
 </div>
 <div class="section" id="licensing">
@@ -384,38 +384,42 @@ http://scripts.embed.ly/jquery.embedly-3.0.2.min.js
 <h2>Changelog</h2>
 </div>
 <div class="section" id="id6">
+<h2>3.0.3</h2>
+<ul class="simple"><li>Use $.map instead of array.map for IE support</li>
+</ul></div>
+<div class="section" id="id7">
 <h2>3.0.2</h2>
 <ul class="simple"><li>Implemented the urlRe back into the options.</li>
 </ul></div>
-<div class="section" id="id7">
+<div class="section" id="id8">
 <h2>3.0.1</h2>
 <ul class="simple"><li>Fixed a bug in bad batching.</li>
 </ul></div>
-<div class="section" id="id8">
+<div class="section" id="id9">
 <h2>3.0.0</h2>
 <ul class="simple"><li>Complete rewrite of the existing plugin to be easier to use.</li>
 <li>Removed $.browser dependency. (#30)</li>
 </ul></div>
-<div class="section" id="id9">
+<div class="section" id="id10">
 <h2>2.2.0</h2>
 <ul class="simple"><li>Fixing bug that was causing callbacks to be overwritten (#23)</li>
 </ul></div>
-<div class="section" id="id10">
+<div class="section" id="id11">
 <h2>2.1.9</h2>
 <ul class="simple"><li>Updated Image styles to work on all images, including thumbnails</li>
 <li>hide empty descriptions</li>
 </ul></div>
-<div class="section" id="id11">
+<div class="section" id="id12">
 <h2>2.1.8</h2>
 <ul class="simple"><li>Fixed how default values/settings are handled</li>
 </ul></div>
-<div class="section" id="id12">
+<div class="section" id="id13">
 <h2>2.1.7</h2>
 <ul class="simple"><li>Added secure and frame as a query param</li>
 <li>Move qunit to lib</li>
 <li>Removed jQuery as we weren't using it.</li>
 </ul></div>
-<div class="section" id="id13">
+<div class="section" id="id14">
 <h2>2.1.6</h2>
 <ul class="simple"><li>Updated the README.rst</li>
 <li>Added <tt class="docutils literal">$.embedly.defaults</tt></li>
@@ -423,7 +427,7 @@ http://scripts.embed.ly/jquery.embedly-3.0.2.min.js
 Levitt</a></li>
 <li>Added <tt class="docutils literal">word</tt> setting</li>
 </ul></div>
-<div class="section" id="id14">
+<div class="section" id="id15">
 <h2>2.1.5</h2>
 <ul class="simple"><li>added secure flag for https requests</li>
 </ul></div>
