update scripts.embed.ly ref to cdn.embed.ly

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@ Embedly jQuery to your document.</p>
 <pre class="prettyprint linenums">
 &lt;head&gt;
   &lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"&gt;&lt;/script&gt;
-  &lt;script src="http://scripts.embed.ly/jquery.embedly-3.0.4.min.js" type="text/javascript"&gt;&lt;/script&gt;
+  &lt;script src="http://cdn.embed.ly/jquery.embedly-3.0.5.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;/head&gt;
 </pre>
 <p>You can now use jQuery selectors to replace links with embedded content:</p>
@@ -364,10 +364,10 @@ $('a').embedly().on('click', function(){
 <div class="section" id="cdn">
 <h2>CDN</h2>
 <p>To get you going even faster, Embedly hosts all the files you need on
-scripts.embed.ly. The latest version is available here:</p>
+cdn.embed.ly. The latest version is available here:</p>
 <pre class="prettyprint linenums">
-http://scripts.embed.ly/jquery.embedly-3.0.4.js
-http://scripts.embed.ly/jquery.embedly-3.0.4.min.js
+http://cdn.embed.ly/jquery.embedly-3.0.5.js
+http://cdn.embed.ly/jquery.embedly-3.0.5.min.js
 </pre>
 </div>
 <div class="section" id="licensing">
@@ -384,7 +384,7 @@ http://scripts.embed.ly/jquery.embedly-3.0.4.min.js
 <h2>Changelog</h2>
 </div>
 <div class="section" id="id6">
-<h2>3.0.4</h2>
+<h2>3.0.5</h2>
 <ul class="simple"><li>Add extract endpoint.</li>
 </ul></div>
 <div class="section" id="id7">
