--- a/demo/display.html
+++ b/demo/display.html
@@ -28,37 +28,19 @@
     <div id="content" class="container">
       <div class="row intro">
         <div class="span12">
-          <h1>Resize, Crop, Fill</h1>
+          <h1>Display, Resize, Crop, Fill</h1>
           <p>
-            Easily use Embedly Display to resize, crop, fill any photo on your site to meet your
+            Easily use Embedly Display to proxy, resize, crop, fill any photo on your site to meet your
             screen size or design needs.
           </p>
         </div>
       </div>
-      <div class="row example intro">
-        <div class="span12">
-          <h2>Orginal Image</h2>
-          <p>
-            Lets take a look at the original image and work through a few examples
-            of the Embedly Display Image API.
-          </p>
-          <div class="example-inline example-center">
-            <p>
-              Throw on your cap and gown its graduation time!
-            </p>
-            <p>
-            <img src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg"/>
-            </p>
-            <p>
-              I really should have shaved before.
-            </p>
-          </div>
-      </div>
       <div class="row example example-1">
         <div class="span12">
-          <h2>Example 1: Crop</h2>
+          <h2>Example 1: Display/Proxy Image</h2>
           <p>
-            Lets crop the image to 100x100 on load.
+            Lets take a look at the original image proxied through our Display endpoint. This is the simplest endpoint,
+            also available with SSL support.
           </p>
           <div class="example-inline example-center">
             <p>
@@ -81,9 +63,44 @@
   I really should have shaved before.
 &lt;/p&gt;
 &lt;script type="text/javascript"&gt;
-  $('.example-1 .example-inline img').embedlyDisplay({
-    key:'Your Embedly Key',
-    endpoint: 'crop',
+  $.embedly.defaults.key = 'Your Embedly Key';
+  $('.example-1 .example-inline img').display();
+&lt;/script&gt;
+          </pre>
+        </div>
+      </div>
+
+
+      <div class="row example example-2">
+        <div class="span12">
+          <h2>Example 2: Crop</h2>
+          <p>
+            Lets crop the image to 100x100 on load. Cropping this image will maintain the aspect ratio
+            and center it.
+          </p>
+          <div class="example-inline example-center">
+            <p>
+              Throw on your cap and gown its graduation time!
+            </p>
+            <p>
+            <img data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" />
+            </p>
+            <p>
+              I really should have shaved before.
+            </p>
+          </div>
+          <pre class="prettyprint linenums">
+&lt;p&gt;
+  Throw on your cap and gown its graduation time!!&lt;/p&gt;
+&lt;p&gt;
+  &lt;img data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg"/&gt;
+&lt;/p&gt;
+&lt;p&gt;
+  I really should have shaved before.
+&lt;/p&gt;
+&lt;script type="text/javascript"&gt;
+  $.embedly.defaults.key = 'Your Embedly Key';
+  $('.example-2 .example-inline img').display('crop', {
     query: {
      width:100,
      width:100,
@@ -94,11 +111,12 @@
           </pre>
         </div>
       </div>
-      <div class="row example example-2">
+      <div class="row example example-3">
         <div class="span12">
-          <h2>Example 2: Click to Resize</h2>
+          <h2>Example 3: Click to Resize</h2>
           <p>
-            Lets show the original photo and click to resize to a width of 300px.
+            Lets show the original photo and click to resize to a width of 300px. This endpoint will automatically
+            scale the image to maintain quality.
           </p>
           <div class="example-inline example-center">
             <p>
@@ -113,11 +131,10 @@
             <button class="btn btn-primary"> Click to Resize</button>
           </div>
           <pre class="prettyprint linenums">
-$('.example-2 button').on('click', function(){
+$.embedly.defaults.key = 'Your Embedly Key';
+$('.example-3 button').on('click', function(){
   var $button = $(this);
-  $('.example-2 .example-inline img').embedlyDisplay({
-    key:'Your Embedly Key',
-    endpoint: 'resize',
+  $('.example-2 .example-inline img').display('resize', {
     query: {
      width:300,
      grow:true }
@@ -126,9 +143,9 @@ $('.example-2 button').on('click', function(){
           </pre>
         </div>
       </div>
-  a<div class="row example example-3">
+  a<div class="row example example-4">
         <div class="span12">
-          <h2>Example 3: Click to Fill</h2>
+          <h2>Example 4: Click to Fill</h2>
           <p>
             Lets show the original photo and click resize image and center on a blue canvas.
           </p>
@@ -145,11 +162,10 @@ $('.example-2 button').on('click', function(){
             <button class="btn btn-primary"> Click to Fill</button>
           </div>
           <pre class="prettyprint linenums">
-$('.example-3 button').on('click', function(){
+$.embedly.defaults.key 'Your Embedly Key';
+$('.example-4 button').on('click', function(){
   var $button = $(this);
-  $('.example-3 .example-inline img').embedlyDisplay({
-    key:'Your Embedly Key',
-    endpoint: 'fill',
+  $('.example-3 .example-inline img').display('fill', {
     query: {
      width:400,
      height:300,
@@ -164,11 +180,13 @@ $('.example-3 button').on('click', function(){
 
     <script type="text/javascript">
       // Set up defaults.
-      $.embedlyDisplay.defaults.key = '4d1f889c20ed11e1abb14040d3dc5c07';
+      $.embedly.defaults.key = '4d1f889c20ed11e1abb14040d3dc5c07';
+
+      // display
+      $('.example-1 .example-inline img').display();
 
       // crop
-      $('.example-1 .example-inline img').embedlyDisplay({
-        endpoint: 'crop',
+      $('.example-2 .example-inline img').display('crop', {
         query: {
          width:100,
          width:100,
@@ -176,10 +194,9 @@ $('.example-3 button').on('click', function(){
       });
 
       // resize on button click
-      $('.example-2 button').on('click', function(){
+      $('.example-3 button').on('click', function(){
         var $button = $(this);
-        $('.example-2 .example-inline img').embedlyDisplay({
-          endpoint: 'resize',
+        $('.example-3 .example-inline img').display('resize', {
           query: {
            width:300,
            grow:true }
@@ -187,10 +204,9 @@ $('.example-3 button').on('click', function(){
       });
 
     // fill with blue on button click
-    $('.example-3 button').on('click', function(){
+    $('.example-4 button').on('click', function(){
       var $button = $(this);
-      $('.example-3 .example-inline img').embedlyDisplay({
-        endpoint: 'fill',
+      $('.example-4 .example-inline img').display('fill', {
         query: {
          width:400,
          height:300,
