--- a/demo/display.html
+++ b/demo/display.html
@@ -103,7 +103,7 @@
   $('.example-2 .example-inline img').display('crop', {
     query: {
      width:100,
-     width:100,
+     height:100,
      grow:true
     }
   });
@@ -189,7 +189,7 @@ $('.example-4 button').on('click', function(){
       $('.example-2 .example-inline img').display('crop', {
         query: {
          width:100,
-         width:100,
+         height:100,
          grow:true }
       });
 
