--- a/index.template.html
+++ b/index.template.html
@@ -20,6 +20,7 @@
             <li><a href="inline.html">Inline</a></li>
             <li><a href="modal.html">Modal</a></li>
             <li><a href="tooltip.html">Tooltip</a></li>
+            <li><a href="display.html">Image Resizing</a></li>
           </ul>
         </div>
       </div>
@@ -36,12 +37,15 @@
     $('a').embedly();</pre>
 
             <p>
-              Embedly jQuery allows to interact with the Embedly API to add rich URL previews to any site. To get an idea of how it works you can check out the following demos.
+              Embedly jQuery allows to interact with the Embedly API to add rich URL previews to any site. To get an idea of how it works you can check out the following demos. <strong>New:
+              Check out our image resizing and proxying.</strong>
+            </p>
             </p>
             <ul class="unstyled">
               <li><a class="btn btn-large" href="inline.html">Inline</a></li>
               <li><a class="btn btn-large" href="modal.html">Modal</a></li>
               <li><a class="btn btn-large" href="tooltip.html">Tooltip</a></li>
+              <li><a class="btn btn-large" href="display.html">Image Resizing</a></li>
             </ul>
             <a class="btn btn-primary btn-large" href="http://github.com/embedly/embedly-jquery">Code</a>
             <div class="clearfix"></div>
