--- a/modal.html
+++ b/modal.html
@@ -20,6 +20,7 @@
             <li><a href="inline.html">Inline</a></li>
             <li class="active"><a href="modal.html">Modal</a></li>
             <li><a href="tooltip.html">Tooltip</a></li>
+            <li><a href="display.html">Image Resizing</a></li>
           </ul>
         </div>
       </div>
