Makes $.embedly.defaults.key work with $.embedly.display.build

--- a/demo/index.html
+++ b/demo/index.html
@@ -46,7 +46,7 @@ Embedly jQuery to your document.</p>
 <pre class="prettyprint linenums">
 &lt;head&gt;
   &lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"&gt;&lt;/script&gt;
-  &lt;script src="http://cdn.embed.ly/jquery.embedly-3.1.0.min.js" type="text/javascript"&gt;&lt;/script&gt;
+  &lt;script src="http://cdn.embed.ly/jquery.embedly-3.1.1.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;/head&gt;
 </pre>
 <p>You can now use jQuery selectors to replace links with embedded content:</p>
@@ -468,8 +468,8 @@ exists.</dd>
 <p>To get you going even faster, Embedly hosts all the files you need on
 cdn.embed.ly. Also available over HTTPS. The latest version is available here:</p>
 <pre class="prettyprint linenums">
-http://cdn.embed.ly/jquery.embedly-3.1.0.js
-http://cdn.embed.ly/jquery.embedly-3.1.0.min.js
+http://cdn.embed.ly/jquery.embedly-3.1.1.js
+http://cdn.embed.ly/jquery.embedly-3.1.1.min.js
 </pre>
 </div>
 <div class="section" id="licensing">
@@ -486,56 +486,60 @@ http://cdn.embed.ly/jquery.embedly-3.1.0.min.js
 <h2>Changelog</h2>
 </div>
 <div class="section" id="id9">
+<h2>3.1.1</h2>
+<ul class="simple"><li>Makes $.embedly.defaults.key work with $.embedly.display.build</li>
+</ul></div>
+<div class="section" id="id10">
 <h2>3.1.0</h2>
 <ul class="simple"><li>Add Display Image Proxy and Resizing endpoint.</li>
 <li>Add $.display for dealing with image resizing and proxying.</li>
 <li>Updated the README.rst.</li>
 </ul></div>
-<div class="section" id="id10">
+<div class="section" id="id11">
 <h2>3.0.5</h2>
 <ul class="simple"><li>Fixes bad deployment.</li>
 </ul></div>
-<div class="section" id="id11">
+<div class="section" id="id12">
 <h2>3.0.4</h2>
 <ul class="simple"><li>Add extract endpoint.</li>
 </ul></div>
-<div class="section" id="id12">
+<div class="section" id="id13">
 <h2>3.0.3</h2>
 <ul class="simple"><li>Use $.map instead of array.map for IE support</li>
 </ul></div>
-<div class="section" id="id13">
+<div class="section" id="id14">
 <h2>3.0.2</h2>
 <ul class="simple"><li>Implemented the urlRe back into the options.</li>
 </ul></div>
-<div class="section" id="id14">
+<div class="section" id="id15">
 <h2>3.0.1</h2>
 <ul class="simple"><li>Fixed a bug in bad batching.</li>
 </ul></div>
-<div class="section" id="id15">
+<div class="section" id="id16">
 <h2>3.0.0</h2>
 <ul class="simple"><li>Complete rewrite of the existing plugin to be easier to use.</li>
 <li>Removed $.browser dependency. (#30)</li>
 </ul></div>
-<div class="section" id="id16">
+<div class="section" id="id17">
 <h2>2.2.0</h2>
 <ul class="simple"><li>Fixing bug that was causing callbacks to be overwritten (#23)</li>
 </ul></div>
-<div class="section" id="id17">
+<div class="section" id="id18">
 <h2>2.1.9</h2>
 <ul class="simple"><li>Updated Image styles to work on all images, including thumbnails</li>
 <li>hide empty descriptions</li>
 </ul></div>
-<div class="section" id="id18">
+<div class="section" id="id19">
 <h2>2.1.8</h2>
 <ul class="simple"><li>Fixed how default values/settings are handled</li>
 </ul></div>
-<div class="section" id="id19">
+<div class="section" id="id20">
 <h2>2.1.7</h2>
 <ul class="simple"><li>Added secure and frame as a query param</li>
 <li>Move qunit to lib</li>
 <li>Removed jQuery as we weren't using it.</li>
 </ul></div>
-<div class="section" id="id20">
+<div class="section" id="id21">
 <h2>2.1.6</h2>
 <ul class="simple"><li>Updated the README.rst</li>
 <li>Added <tt class="docutils literal">$.embedly.defaults</tt></li>
@@ -543,7 +547,7 @@ http://cdn.embed.ly/jquery.embedly-3.1.0.min.js
 Levitt</a></li>
 <li>Added <tt class="docutils literal">word</tt> setting</li>
 </ul></div>
-<div class="section" id="id21">
+<div class="section" id="id22">
 <h2>2.1.5</h2>
 <ul class="simple"><li>added secure flag for https requests</li>
 </ul></div>
