update version of jquery and embedly-jquery js in demos

--- a/demo/inline.html
+++ b/demo/inline.html
@@ -64,7 +64,7 @@
 &lt;/p&gt;
 &lt;script type="text/javascript"&gt;
   $('.example-1 .example-inline a').embedly({
-    key:'4d1f889c20ed11e1abb14040d3dc5c07',
+    key:'YOUR_EMBEDLY_KEY',
     query: {
       maxwidth:530,
     }
