--- a/demo/modal.html
+++ b/demo/modal.html
@@ -55,7 +55,7 @@
             <pre class="prettyprint linenums">
 // set up the defaults.
 $.embedly.defaults = {
-  key:'4d1f889c20ed11e1abb14040d3dc5c07',
+  key:'YOUR_EMBEDLY_KEY',
   query: {
     maxwidth:530,
   },
@@ -99,7 +99,7 @@ $('.example-1 a').on('click', function(){
           <pre class="prettyprint linenums">
 // Set up defaults.
 $.embedly.defaults = {
-  key:'4d1f889c20ed11e1abb14040d3dc5c07',
+  key:'YOUR_EMBEDLY_KEY',
   query: {
     maxwidth:530,
   },
