--- a/inline.html
+++ b/inline.html
@@ -64,7 +64,7 @@
 &lt;/p&gt;
 &lt;script type="text/javascript"&gt;
   $('.example-1 .example-inline a').embedly({
-    key:'4d1f889c20ed11e1abb14040d3dc5c07',
+    key:'YOUR_EMBEDLY_KEY',
     query: {
       maxwidth:530,
     }
@@ -142,7 +142,7 @@ $('.example-3 .example-inline a').embedly({
     maxwidth:500,
     autoplay:true
   },
-  display: function(elem, data){
+  display: function(data, elem){
     //Adds the image to the a tag and then sets up the sizing.
     $(elem).html('&lt;img src="'+data.thumbnail_url+'"/&gt;&lt;span&gt;&lt;/span&gt;')
       .width(data.thumbnail_width)
@@ -185,8 +185,8 @@ $('.example-3 .example-inline a').embedly({
           maxwidth:500,
           autoplay:true
         },
-        display: function(data){
-          $(this).html('<img src="'+data.thumbnail_url+'"/><span></span>')
+        display: function(data, elem){
+          $(elem).html('<img src="'+data.thumbnail_url+'"/><span></span>')
             .width(data.thumbnail_width)
             .height(data.thumbnail_height)
             .find('span').css('top', data.thumbnail_height/2-36)
