added html snippet for jquery inline video example

--- a/inline.html
+++ b/inline.html
@@ -124,6 +124,11 @@ $('.example-2 button').on('click', function(){
             </p>
           </div>
           <pre class="prettyprint linenums">
+&lt;p&gt;
+  &lt;a class="play" href="http://www.youtube.com/watch?v=vsmUpYIA99o"&gt;Watch&lt;/a&gt;
+&lt;/p&gt;
+          </pre>
+          <pre class="prettyprint linenums">
 .play {
   position: relative;
   display: block;
