--- a/demo/display.html
+++ b/demo/display.html
@@ -47,7 +47,7 @@
               Throw on your cap and gown its graduation time!
             </p>
             <p>
-            <img data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" />
+            <img data-src="http://embed.ly/static/images/hero_banner/hero_world.png" />
             </p>
             <p>
               I really should have shaved before.
@@ -83,7 +83,7 @@
               Throw on your cap and gown its graduation time!
             </p>
             <p>
-            <img data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" />
+            <img data-src="http://embed.ly/static/images/hero_banner/hero_world.png" />
             </p>
             <p>
               I really should have shaved before.
@@ -123,7 +123,7 @@
               Throw on your cap and gown its graduation time!
             </p>
             <p>
-            <img src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" />
+            <img src="http://embed.ly/static/images/hero_banner/hero_world.png" data-src="http://embed.ly/static/images/hero_banner/hero_world.png" />
             </p>
             <p>
               I really should have shaved before.
@@ -154,7 +154,7 @@ $('.example-3 button').on('click', function(){
               Throw on your cap and gown its graduation time!
             </p>
             <p>
-            <img src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" data-src="http://images.ak.instagram.com/media/2011/06/05/1fdb445e224d459f97ff128b663045f9_7.jpg" />
+            <img src="http://embed.ly/static/images/hero_banner/hero_world.png" data-src="http://embed.ly/static/images/hero_banner/hero_world.png?" />
             </p>
             <p>
               I really should have shaved before.
