--- a/test/embedly-jquery.html
+++ b/test/embedly-jquery.html
@@ -24,10 +24,10 @@
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">
     <div id="basic">
-      <a class="photo" href="http://twitpic.com/1c4t5h">Photo</a>
+      <a class="photo" href="https://www.instagram.com/p/BCizMYGoXYG/?">Photo</a>
     </div>
     <div id="photo">
-      <a href="http://twitpic.com/135xa">Photo</a>
+      <a href="https://www.instagram.com/p/BCizMYGoXYG/?">Photo</a>
     </div>
     <div id="video">
       <a href="http://www.youtube.com/watch?v=9bZkp7q19f0">Video</a>
